<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="55dp"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name_title"
            app:menu="@menu/action_menu"
            app:navigationIcon="@drawable/ic_dehaze_white_24dp"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
    </com.google.android.material.appbar.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_9x"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/appBar">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/qtProducts"
            style="@style/ListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginLeft="@dimen/margin_2x"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@id/qtProducts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTotalProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_products">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTotalProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_2x"
                android:layout_marginStart="@dimen/margin_2x"
                android:text="@string/lbl_total_products"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/colorLabelTotal"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vlrTotalProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_2x"
                android:paddingTop="@dimen/margin_2x"
                android:textSize="16sp"
                android:text="$0,00"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/lblSubTotalProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_2x"
                android:layout_marginStart="@dimen/margin_2x"
                android:text="@string/lbl_sub_total_products"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblTotalProduct" />

            <TextView
                android:id="@+id/vlrSubTotalProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_2x"
                android:paddingTop="@dimen/margin_2x"
                android:textSize="16sp"
                android:textColor="@color/colorLightGray"
                android:text="$0,00"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vlrTotalProduct"/>

            <TextView
                android:id="@+id/lblShipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_half"
                android:layout_marginStart="@dimen/margin_2x"
                android:text="@string/lbl_shipping"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblSubTotalProduct" />

            <TextView
                android:id="@+id/vlrShipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_2x"
                android:paddingTop="@dimen/margin_half"
                android:textSize="16sp"
                android:textColor="@color/colorLightGray"
                android:text="$0,00"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vlrSubTotalProduct"/>

            <TextView
                android:id="@+id/lblTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_half"
                android:layout_marginStart="@dimen/margin_2x"
                android:text="@string/lbl_tax"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblShipping" />

            <TextView
                android:id="@+id/vlrTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_2x"
                android:paddingTop="@dimen/margin_half"
                android:textSize="16sp"
                android:textColor="@color/colorLightGray"
                android:text="$0,00"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vlrShipping"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/pBarProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:indeterminateDrawable="@drawable/circular_indeterminate"
        android:indeterminateDuration="2000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_products"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>